Get only AVG(Smoke) and AVG(CO)
